chapter3 add contact views and setup base_title

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -11,3 +11,5 @@
     </p>
      <%= link_to "about", static_pages_about_path  %>
      <%= link_to "Home", root_path  %>
+    <%= link_to "contact", static_pages_contact_path  %>
+     
