--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,3 +12,5 @@
     </p>
     <%= link_to "help", static_pages_help_path  %>
     <%= link_to "Home", root_path  %>
+    <%= link_to "contact", static_pages_contact_path  %>
+    
