--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,3 +10,5 @@
     </p>
     <%= link_to "help", static_pages_help_path  %>
     <%= link_to "about", static_pages_about_path  %>
+    <%= link_to "contact", static_pages_contact_path  %>
+
