add layout header footer & controller user

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,8 @@
 <% provide(:poo, "Contact") %>
 
-<h2>Contact</h2>
+<h1>Contact</h1>
 <p>Come Buy Me</p>
 
-    <%= link_to "help", static_pages_help_path  %>
-    <%= link_to "about", static_pages_about_path  %>
+    <%= link_to "help", help_path  %>
+    <%= link_to "about", about_path  %>
     <%= link_to "Home", root_path  %>
