--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
 <% provide(:poo, "About") %>
 
-    <h1>qbout</h1>
+    <h1>About</h1>
     <p>
       The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
       Tutorial</em></a> is a
@@ -10,7 +10,7 @@
       <a href="http://rubyonrails.org/">Ruby on Rails</a>.
       This is the sample application for the tutorial.
     </p>
-    <%= link_to "help", static_pages_help_path  %>
+    <%= link_to "help", help_path  %>
     <%= link_to "Home", root_path  %>
-    <%= link_to "contact", static_pages_contact_path  %>
+    <%= link_to "contact", contact_path  %>
     
