--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -9,7 +9,7 @@
       <a href="http://www.railstutorial.org/book"><em>Ruby on Rails
       Tutorial</em> book</a>.
     </p>
-     <%= link_to "about", static_pages_about_path  %>
+     <%= link_to "about", about_path  %>
      <%= link_to "Home", root_path  %>
-    <%= link_to "contact", static_pages_contact_path  %>
+    <%= link_to "contact", contact_path  %>
      
