--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,9 @@
  @import "bootstrap";
 
 
+$gray-medium-light: #eaeaea;
+
+
 body {
 	padding-top: 60px;
 }
@@ -96,7 +99,44 @@ footer {
 
 
 
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
 
 
 
+input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+ }
 
+input {
+  height: auto !important;
+}
+
+#error_list {
+	color: red;
+	ul{
+		color: red;
+	}
+}
+
+.field_with_errors {
+  @extend .has-error;
+  .form-control {
+    color: $state-danger-text;
+  }
+}
