--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,26 @@
 <% provide(:poo, '註冊') %>
 <h1>Sign Up 註冊 </h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= form_for @user do |f| %>
+		<%= render 'layouts/error_messages' %>
+			<div>
+				<%= f.label :name %>
+				<%= f.text_field :name, class: "form-control" %>
+			</div>
+			<div>
+				<%= f.label :email %>
+				<%= f.email_field :email, class: "form-control" %>
+			</div>	
+			<div>	
+				<%= f.label :password %>
+				<%= f.password_field :password, class: "form-control" %>
+			</div>
+			<div>
+				<%= f.label :password_confirmation, "Confirmation" %>
+				<%= f.password_field :password_confirmation, class: "form-control" %>
+			</div>
+				<%= f.submit "Create Account", class: "btn btn-primary" %>
+		<% end %>
+	</div>
+</div>
